# cmake-study

./: Readme.md
example/: CMakeLists.txt  README.md  vcpkg.json
example/include/: Vector3.h
example/rng/: CMakeLists.txt  README.md  rng-config.cmake.in
example/rng/include/rng/: Random.h
example/rng/src/: CMakeLists.txt  Random.cpp
example/src/: CMakeLists.txt  Vector3.cpp  main.cpp
example/test/: CMakeLists.txt  test1.cpp  test2.cpp
